0031689: Coding Rules - including STEPCAFControl_Writer.hxx produces compilation error

Added missing #include <NCollection_Vector.hxx>.